@@ -2,6 +2,8 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 == 12/27/2014 ==
 Akkadius: Add option to automatic database upgrade script 5) Download latest Opcodes from Github
+Trevius: (RoF2) Fixed dropping items on the ground so they go to ground level instead of camera height.
+Trevius: Show Helm Option should be functional again.
 
 == 12/24/2014 ==
 Trevius: (RoF+) Added herosforgemodel field to the npc_types table.
